<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".screen.acts.PaymentActivity">




    <TextView
        android:text="@string/welcom_string"
        android:textSize="32sp"
        android:layout_marginBottom="24dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_gravity="center"
        android:layout_marginHorizontal="28dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:paddingVertical="12dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/button_buy_3"
                android:text="@string/buy_3_notes"
                android:textSize="28sp"
                android:layout_marginTop="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/button_buy_5"
                android:text="@string/buy_5_notes"
                android:layout_marginTop="12dp"
                android:textSize="28sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/button_buy_10"
                android:text="@string/buy_10_notes"
                android:layout_marginTop="12dp"
                android:textSize="28sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/button_buy_premium_week"
                android:text="@string/subpremium"
                android:layout_marginTop="12dp"
                android:textSize="28sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/button_exit_app"
        android:text="Exit"
        android:textSize="14sp"
        android:layout_marginBottom="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>